fix dotted line overflow

--- a/themes/tent/sass/templates/_shop.scss
+++ b/themes/tent/sass/templates/_shop.scss
@@ -19,9 +19,9 @@
 }
 
 .shop__item-description {
+  position: relative;
   display: flex;
   justify-content: space-between;
-  overflow: hidden;
 }
 
 .shop__item-title {
